Adding React Server Side Rendering.

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="/dist//build/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title><%- title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="build/style.css">
 </head>
 <body>
-    <script src="/dist/build/js.js"></script>
+<%= body %>
+<script src="build/js.js"></script>
 </body>
 </html>
